[project]
name = "minif2f"
version = "0.1.0"
description = "MiniF2F benchmark implementation for Lean theorem proving"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["minif2f.py"]
python_functions = ["test_*"]
timeout = 300